--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "document-frontend-ui",
+  "name": "document-management-frontend",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -20,22 +20,37 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^20.1.4",
     "@angular/common": "^20.1.0",
     "@angular/compiler": "^20.1.0",
     "@angular/core": "^20.1.0",
     "@angular/forms": "^20.1.0",
+    "@angular/material": "^20.1.4",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
+    "@auth0/angular-jwt": "^5.2.0",
+    "@ngrx/effects": "^20.0.0",
+    "@ngrx/entity": "^20.0.0",
+    "@ngrx/router-store": "^20.0.0",
+    "@ngrx/store": "^20.0.0",
+    "@ngrx/store-devtools": "^20.0.0",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular/build": "^20.1.4",
     "@angular/cli": "^20.1.4",
     "@angular/compiler-cli": "^20.1.0",
+    "@cypress/schematic": "^3.0.0",
+    "@testing-library/angular": "^17.4.0",
+    "@testing-library/jest-dom": "^6.6.4",
     "@types/jasmine": "~5.1.0",
+    "@types/jest": "^30.0.0",
+    "cypress": "^14.5.3",
     "jasmine-core": "~5.8.0",
+    "jest": "^30.0.5",
+    "jest-preset-angular": "^15.0.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
