--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@ngrx/store": "^20.0.0",
     "@ngrx/store-devtools": "^20.0.0",
     "ngx-toastr": "^19.0.0",
+    "perf_hooks": "^0.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
